[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Art/Wizard Pack/Crouch.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Wizard Pack/Jump.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Wizard Pack/Run.png" type="Texture" id=3]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/SFX/FreeSFX/FreeSFX/GameSFX/PowerUp/Retro PowerUP 09.wav" type="AudioStream" id=5]
[ext_resource path="res://Character.gd" type="Script" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/SFX/FreeSFX/FreeSFX/GameSFX/Bounce Jump/Retro Jump Classic 08.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/FreeSFX/FreeSFX/GameSFX/Swoosh/Retro Swooosh 07.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/FreeSFX/FreeSFX/GameSFX/Events/Negative/Retro Negative Short 23.wav" type="AudioStream" id=11]
[ext_resource path="res://pausePop.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), null, SubResource( 4 ), null, SubResource( 5 ), null, SubResource( 6 ), null, SubResource( 7 ), null, SubResource( 8 ), null, SubResource( 9 ), null, SubResource( 10 ), null ],
"loop": true,
"name": "Hit",
"speed": 28.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Run",
"speed": 14.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 20.1004
height = 24.4599

[node name="Character" type="KinematicBody2D" groups=[
"character",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 1
script = ExtResource( 6 )
maxSpeed = 250
accel = 0.5
jumpSpeed = -600
gravity = 1500
minSpeed = 100
boostSpeed = 600
pauseScene = ExtResource( 12 )
gameOverScene = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "Run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.24493, 0.841846 )
shape = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 150, 0 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="Crouch" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 8 )]
offset = Vector2( 128, 0 )
scale = Vector2( 0.75, 0.75 )
transform = Transform2D( 0.75, 0, 0, 0.75, 128, 0 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0

[node name="Crouch2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Boost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="Crouch" to="." method="_on_Crouch_timeout"]
[connection signal="enemyAttack" from="HUD" to="." method="_on_HUD_enemyAttack"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
